<resources>
    <string name="app_name">Juma Ngapi</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6900315854016026/3928109998</string>

    <string name="month_day_year">MONTH</string>
    <string name="weekday_day_year">WEEKDAY</string>


    <string name="exception_message">Please ensure all date fields are filled correctly</string>

    <string name="empty" translatable="false"></string>
    <string name="time" translatable="false">time</string>
    <string name="times" translatable="false">times</string>
    <string name="falls">falls</string>
    <string name="fell">fell</string>
    <string name="will_fall">will fall</string>

    <string name="sentence">The %1$s%2$d%3$s of the month %4$s on a %5$s %6$d %7$s in the year %8$d%9$s</string>

    <string-array name="weekdays_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string name="policy_button_string">PRIVACY</string>
    <string name="close_button_string">CLOSE</string>
    <string name="personalized_button_text">Allow Personalized Ads</string>
    <string name="non_personalized_button_text">Allow Only Non-Personalized Ads</string>
    <string name="privacy_stuff_explanation">Your privacy and data security are important to us. You may choose whether we can use your data to display ads that are customized to you. You can change your decision at any time. You can view <a href="https://juma-ngapi.flycricket.io/privacy.html">our privacy policy and the privacy policies of our partners here.</a></string>


</resources>
