<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PolicyFragment"
    android:background="@color/blueGrey500">




    <TextView
        android:id="@+id/frag_title"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:autoSizeTextType="uniform"
        android:text="@string/policy_button_string"
        android:textColor="@color/textDark"
         />


    <TextView
        android:id="@+id/explanation_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_title"
        android:text="@string/privacy_stuff_explanation"
        android:textColor="@color/textDark"
        android:textColorLink="#039BE5"/>

    <Button
        android:id="@+id/personalized_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation_textview"
        android:text="@string/personalized_button_text"
        app:backgroundTint="@color/blueGrey700"
        android:onClick="outsideEuropeStorePersConsent"
        />

    <Button
        android:id="@+id/non_personalized_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/personalized_button"
        android:text="@string/non_personalized_button_text"
        app:backgroundTint="@color/blueGrey700"
        android:onClick="outsideEuropeStoreNonPersConsent"/>


    <Button
        android:id="@+id/close_frag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/close_button_string"
        app:backgroundTint="@color/blueGrey700"
        android:onClick="hideThePolicy"
        />


</RelativeLayout>